# game-of-life

./: CMakeLists.txt  README.md
src/: main.c  math_utils.c  math_utils.h  render_scaling.c  render_scaling.h  vector.h
